Update icons, remove demo, fix links

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1514,7 +1514,7 @@ body {
 .store-icon {
   width: 16px;
   height: 16px;
-  filter: brightness(0) invert(1);
+  // filter: brightness(0) invert(1);
 }
 
 /* Roadmap Section */
